Get rid of scrollbar. Fixes highcharts/highcharts#7785

--- a/include/style.css
+++ b/include/style.css
@@ -732,6 +732,7 @@ a:hover {
   }
   .footer {
     padding-left: 15%;
+    width: 85%;
   }
   .options-tree {
     overflow-x: auto;
